--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>G-Review</title>
+    <title>{% block title %}G-Review{s% endblock title %}</title>
     <link
       rel="icon"
       href="{% static 'images/discordicon.png' %}"
