--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,13 @@
             <li>
               <a class="link" href="#analisis">Análisis</a>
             </li>
+            <li>
+              <a class="link" href="#indicadores">Indicadores Económicos</a>
+            </li>
+            <li>
+              <a class="link" href="#pokedex">Pokédex</a>
+            </li>
+            
             {% if user.is_authenticated %}
             <li class="nav-item active">
               <a class="link" href="#">Bienvenido {{ user.username }}</a>
@@ -67,7 +74,45 @@
           </ol>
         </nav>
       </div>
+
+
+
+
     </header>
+    
+    <!--API indicadores economicos-->
+    <!--
+    <p class="text-center">Indicadores Económicos API</p>
+    <div class="container my-5 text-center">
+      <div class="mt-5">
+          <table class="table table-dark">
+              <thead>
+                  <tr>
+                      <th scope="col">Código</th>
+                      <th scope="col">Nombre</th>
+                      <th scope="col">Unidad_medida</th>
+                      <th scope="col">Fecha</th>
+                      <th scope="col">Valor</th>
+                  </tr>
+              </thead>
+              <tbody id="contenido"></tbody>
+          </table>
+      </div>
+
+      <script src="../static/js/indicadores.js"></script>
+      <script>traer()</script>
+      -->
+
+      <!--API pokemon-->
+      
+      <p class="text-center">Pokédex API</p>
+      <div class="container">
+        <h1>Pokedex</h1>
+        <ul id="pokedex"></ul>
+    </div>
+      <script src="../static/js/pokeapi.js"></script>
+      <script>fetchPokemon()</script>
+      
     <div >
       {% block content %} {% endblock %}
     </div>
