Pagina de Categorias Funcionando. Categorias funcionando.

--- a/templates/categoria.html
+++ b/templates/categoria.html
@@ -14,7 +14,7 @@
             </figure>
             <div class="article-detail">
                 <h3 class="article-title">{{ adventure.name }}</h3>
-                <a class="article-url" href="#" target="_blank">Ver Categoría</a>
+                <a class="article-url" href="{% url 'aventura' %}" target="_blank">Ver Categoría</a>
             </div>
         </article>
         <article class="article">
@@ -23,7 +23,7 @@
             </figure>
             <div class="article-detail">
                 <h3 class="article-title">{{ strategy.name }}</h3>
-                <a class="article-url" href="#" target="_blank">Ver Categoría</a>
+                <a class="article-url" href="{% url 'estrategia' %}" target="_blank">Ver Categoría</a>
             </div>
         </article>
         <article class="article">
@@ -32,7 +32,7 @@
             </figure>
             <div class="article-detail">
                 <h3 class="article-title">{{ war.name }}</h3>
-                <a class="article-url" href="#" target="_blank">Ver Categoría</a>
+                <a class="article-url" href="{% url 'accionbelica' %}" target="_blank">Ver Categoría</a>
             </div>
         </article>
         <article class="article">
@@ -41,7 +41,7 @@
             </figure>
             <div class="article-detail">
                 <h3 class="article-title">{{ race.name }}</h3>
-                <a class="article-url" href="#" target="_blank">Ver Categoría</a>
+                <a class="article-url" href="{% url 'carreras' %}" target="_blank">Ver Categoría</a>
             </div>
         </article>
         <article class="article">
@@ -50,7 +50,7 @@
             </figure>
             <div class="article-detail">
                 <h3 class="article-title">{{ mmorpg.name }}</h3>
-                <a class="article-url" href="#" target="_blank">Ver Categoría</a>
+                <a class="article-url" href="{% url 'mmorpg' %}" target="_blank">Ver Categoría</a>
             </div>
         </article>
     </div>
