--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,6 +53,13 @@ h6 {
 	font-size: 16px;
 }
 
+.blog-title {
+	margin-top: 30px;
+    margin-bottom: 0;
+    font-size: 60px;
+    font-weight: 400;
+}
+
 p {
 	font-size: 16px;
 	color: #8c8c8c;
