Cambio formato rutas

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@
         </figure>
         <nav>
           <ol>
+            
             <li>
               <a class="link" href="{% url 'home' %}">Inicio</a>
             </li>
@@ -115,7 +116,7 @@
     </div>
     <section id="contacto" class="footer">
       <div class="container">
-        <form action="/suscripcion/" class="form-email">
+        <form action="#" class="form-email">
           <h3>Suscríbete a nuestro boletín</h3>
           <input type="text" placeholder="      Déjanos tu e-mail" id="email" />
 
