--- a/templates/indicadores.html
+++ b/templates/indicadores.html
@@ -27,7 +27,7 @@
 
             </tbody>
         </table>
-        <script src="../static/js/indicadores.js"></script>
+        <script src="{% static 'js/indicadores.js' %}"></script>
         <script>
           traer();
         </script>
