--- a/templates/pokemons.html
+++ b/templates/pokemons.html
@@ -8,7 +8,7 @@
       
       <ul id="pokedex"></ul>
     </div>
-    <script src="../static/js/pokeapi.js"></script>
+    <script src="{% static 'js/pokeapi.js' %}"></script>
     <script>
       fetchPokemon();
     </script>
