--- a/templates/genero.html
+++ b/templates/genero.html
@@ -14,7 +14,7 @@
                 <h6 class="news-subtitle">Categoría: {{ post.category }}</h6>
                 <h6 class="news-subtitle">Autor: {{ post.author }}</h6>
                 <p class="news-date"><small>{{ post.pub_date }}</small></p>
-                <p class="news-description">{{ post.description }}<a href="noticia.html">Ver Más...</a></p>
+                <p class="news-description">{{ post.description }}<a href="">Ver Más...</a></p>
             </div>
             <figure class="news-imageContainer">
                 <img class="news-image" src="{{ post.reference_image.url }}" alt="imagen de {{ post.slug }}" width="500">
